Fixed contrast in the H1 header, and also fixed broken link

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,7 +21,7 @@ body {
 }
 
 .header h1 .seo {
-    color: #d9dcd6;
+    color: #0804ff;
 }
 
 .header div {
